--- a/package.json
+++ b/package.json
@@ -16,5 +16,14 @@
     "eslint-plugin-node": "^6.0.1",
     "eslint-plugin-promise": "^3.8.0",
     "eslint-plugin-standard": "^3.1.0"
+  },
+  "dependencies": {
+    "body-parser": "^1.18.3",
+    "express": "^4.16.3",
+    "express-mquery": "^1.0.2",
+    "mongoose": "^5.1.5",
+    "mongoose-rest-actions": "^0.13.1",
+    "morgan": "^1.9.0",
+    "slug": "^0.9.1"
   }
 }
