--- a/package.json
+++ b/package.json
@@ -20,12 +20,14 @@
   },
   "dependencies": {
     "body-parser": "^1.18.3",
+    "crypto": "^1.0.1",
     "express": "^4.16.3",
     "express-mquery": "^1.0.2",
     "mongoose": "^5.1.5",
     "mongoose-rest-actions": "^0.13.1",
     "mongoose-unique-validator": "^2.0.1",
     "morgan": "^1.9.0",
-    "slug": "^0.9.1"
+    "slug": "^0.9.1",
+    "uid2": "0.0.3"
   }
 }
